--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #titel {
-    background-image: url(/img/forest-g4a26d870f_640.jpg);
+        background-color: black;
         background-repeat: repeat;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
